<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DrawingBoard</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- MENU -->
    <string name="menu_toolbox">Tool box</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_clean_canvas">Clean canvas</string>
    <string name="menu_add_tool">Add tool</string>
    <string name="menu_remove_tool">Remove tool</string>
    <string name="menu_save_canvas">Save canvas</string>
    <string name="menu_save_template">Save template</string>

    <!-- Toolbox -->
    <string name="toolbox_title">Pick a tool</string>

    <!-- Remove tool -->
    <string name="remove_tool_title">Remove tools</string>
    <string name="remove_tool_cancel">Cancel</string>
    <string name="remove_tool_remove">Remove</string>

</resources>
